[package]
name = "golden-circle-packing"
version = "0.1.0"
authors = ["JacobZwang <zwang.jacob@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0"
wasm-bindgen = "0.2.68"
serde = "*"
serde_json = "*"
serde_derive = "*"
rayon = "1.5.0"
